fixed line spacing

--- a/src/client/styles/OutputBox.css
+++ b/src/client/styles/OutputBox.css
@@ -1,5 +1,5 @@
 .outputLine {
-    font-size: 24px;
+    font-size: 22px;
     word-wrap: normal; 
     width: 100%;
     overflow-wrap: break-word;
